feat: rename package to lifestyle-dashboard and update widget contracts
- Changed package name from @lifestyle-dashboard/source to lifestyle-dashboard in package.json.
- Updated tsconfig.base.json to include new widget-registry and widget-contracts paths.
- Added new library for widget contracts with interfaces and enums for widget management.
- Created widget registry to manage widget components and their settings.
- Added necessary configuration files for jest and eslint for the new libraries.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lifestyle-dashboard/source",
+  "name": "lifestyle-dashboard",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
