--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -35,7 +35,10 @@
         "libs/front/ui/timetracker-widget/src/index.ts"
       ],
       "@lifestyle-dashboard/user": ["libs/shared/user/src/index.ts"],
-      "@lifestyle-dashboard/widget": ["libs/shared/widget/src/index.ts"],
+      "@lifestyle-dashboard/widget-registry": ["libs/shared/widget-registry/src/index.ts"],
+      "@lifestyle-dashboard/widget-contracts": [
+        "libs/shared/widget-contracts/src/index.ts"
+      ],
       "@lifestyle-dashboard/widget-name-pipe": [
         "libs/front/ui/widget-name-pipe/src/index.ts"
       ]
