--- a/libs/shared/widget-registry/project.json
+++ b/libs/shared/widget-registry/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "widget",
+  "name": "widget-registry",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/shared/widget/src",
+  "sourceRoot": "libs/shared/widget-registry/src",
   "projectType": "library",
   "tags": [],
   "targets": {
@@ -9,7 +9,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/front/ui/timetracker-widget/jest.config.ts"
+        "jestConfig": "libs/shared/widget-registry/jest.config.ts"
       }
     },
     "lint": {
