Implement code changes to enhance functionality and improve performance

--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/swagger": "^7.3.1",
     "@prisma/client": "^6.5.0",
-    "@taiga-ui/addon-charts": "4.40.0",
-    "@taiga-ui/cdk": "4.40.0",
-    "@taiga-ui/core": "4.40.0",
+    "@taiga-ui/addon-charts": "4.58.0",
+    "@taiga-ui/cdk": "4.58.0",
+    "@taiga-ui/core": "4.58.0",
     "@taiga-ui/event-plugins": "^4.6.0",
-    "@taiga-ui/icons": "4.40.0",
-    "@taiga-ui/kit": "4.40.0",
-    "@taiga-ui/layout": "^4.40.0",
-    "@taiga-ui/legacy": "4.40.0",
+    "@taiga-ui/icons": "4.58.0",
+    "@taiga-ui/kit": "4.58.0",
+    "@taiga-ui/layout": "4.58.0",
+    "@taiga-ui/legacy": "4.58.0",
     "@taiga-ui/polymorpheus": "^4.9.0",
     "axios": "^1.6.0",
     "bcrypt": "^6.0.0",
