--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@angular-devkit/build-angular": "20.0.2",
     "@angular-devkit/core": "20.0.2",
     "@angular-devkit/schematics": "20.0.2",
+    "@angular/build": "^20.3.6",
     "@angular/cli": "~20.0.0",
     "@angular/compiler-cli": "20.0.3",
     "@angular/language-service": "20.0.3",
