--- a/libs/front/ui/dynamic-host/project.json
+++ b/libs/front/ui/dynamic-host/project.json
@@ -1,7 +1,8 @@
 {
-  "name": "lifestyle-data-service",
+  "name": "dynamic-host",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/front/api/lifestyle-data-service/src",
+  "sourceRoot": "libs/front/ui/dynamic-host/src",
+  "prefix": "lib",
   "projectType": "library",
   "tags": [],
   "targets": {
@@ -9,7 +10,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/front/ui/day-card-dialog/jest.config.ts"
+        "jestConfig": "libs/front/ui/dynamic-host/jest.config.ts"
       }
     },
     "lint": {
