refactor(auth): clean up component code and styles for consistency
refactor(login): simplify HTML structure and improve error handling

refactor(sign-up): streamline error display in form fields

refactor(widget-layout-settings): enhance layout settings component for better readability

fix(dashboard): update service to ensure proper configuration handling

feat(day-data): add new library for managing day data with CRUD operations

chore(deps): update dependencies and improve ESLint configuration

style: standardize formatting across various components and services

fix: correct HTML structure and improve accessibility in day card dialog

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,10 @@
 {
+  "printWidth": 100,
+  "tabWidth": 2,
   "singleQuote": true,
+  "trailingComma": "all",
+  "semi": true,
+  "bracketSpacing": true,
   "overrides": [
     {
       "files": "*.component.html",
