feat(todos-widget): initialize todos widget library with configuration and setup files refactor(calendar): adjust alignment properties for bottom-left slot docs(README): update backend restart instructions and add widget creation steps

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -28,6 +28,7 @@
         "libs/front/api/lifestyle-widget-data-service/src/index.ts"
       ],
       "@lifestyle-dashboard/state": ["libs/shared/state/src/index.ts"],
+      "@lifestyle-dashboard/time-pipe": ["libs/front/utils/time-pipe/src/index.ts"],
       "@lifestyle-dashboard/timetracker": ["libs/shared/timetracker/src/index.ts"],
       "@lifestyle-dashboard/timetracker-widget": ["libs/front/ui/timetracker-widget/src/index.ts"],
       "@lifestyle-dashboard/user": ["libs/shared/user/src/index.ts"],
@@ -35,7 +36,7 @@
       "@lifestyle-dashboard/widget-contracts": ["libs/shared/widget-contracts/src/index.ts"],
       "@lifestyle-dashboard/widget-name-pipe": ["libs/front/ui/widget-name-pipe/src/index.ts"],
       "@lifestyle-dashboard/widget-registry": ["libs/shared/widget-registry/src/index.ts"],
-      "@lifestyle-dashboard/time-pipe": ["libs/front/utils/time-pipe/src/index.ts"]
+      "@lifestyle-dashboard/todos-widget": ["libs/front/ui/todos-widget/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
