refactor: clean up code formatting and improve readability across multiple components
- Updated Jest configuration files to ensure consistent coverage directory paths.
- Refactored LifestyleWidgetDataService to enhance parameter handling with HttpParams.
- Improved HTML templates in Calendar and Day components for better formatting.
- Streamlined LESS styles in Calendar and Todos components for consistency.
- Enhanced TypeScript files by removing unnecessary line breaks and improving import statements.
- Updated widget input interfaces and settings components for better clarity and structure.
- Refactored widget registry to improve organization and readability.
- Updated package.json to include libs in prettier formatting command.
- Adjusted tsconfig.base.json to ensure proper path mappings for todos-widget.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "nx:format:fix": "nx format:write",
     "build:all": "nx run-many --target=build --all --parallel",
     "generate:api-types": "npx @openapitools/openapi-generator-cli generate -i openapi.json -g typescript -o libs/api-types --additional-properties=fileNaming=kebab-case",
-    "prettier:fix": "npx prettier --write \"apps/**/*.{ts,html,less}\""
+    "prettier:fix": "npx prettier --write \"apps/**/*.{ts,html,less}\" \"libs/**/*.{ts,html,less}\""
   },
   "private": true,
   "dependencies": {
