refactor: reorganize imports and improve code structure across multiple components
- Adjusted import order and structure in various files for consistency and clarity.
- Updated form handling in login and sign-up components to improve user experience.
- Enhanced error handling in authentication services and guards.
- Refactored widget settings components to streamline functionality and maintainability.
- Updated package dependencies to the latest versions for improved performance and security.

--- a/.prettierrc
+++ b/.prettierrc
@@ -8,9 +8,20 @@
   "overrides": [
     {
       "files": "*.component.html",
-      "options": {
-        "parser": "angular"
-      }
+      "options": { "parser": "angular" }
     }
+  ],
+  "plugins": ["@ianvs/prettier-plugin-sort-imports"],
+  "importOrderParserPlugins": ["typescript", "decorators-legacy"],
+  "importOrder": [
+    "^node:",
+    "^@angular/(.*)$",
+    "^rxjs($|/)",
+    "^@taiga-ui/(.*)$",
+    "^@lifestyle-dashboard/(.*)$",
+    "^libs/(.*)$",
+    "^apps/(.*)$",
+    "^shared/(.*)$",
+    "^[./]"
   ]
 }
