--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@taiga-ui/addon-charts": "4.58.0",
     "@taiga-ui/cdk": "4.58.0",
     "@taiga-ui/core": "4.58.0",
-    "@taiga-ui/event-plugins": "^4.6.0",
+    "@taiga-ui/event-plugins": "^4.7.0",
     "@taiga-ui/icons": "4.58.0",
     "@taiga-ui/kit": "4.58.0",
     "@taiga-ui/layout": "4.58.0",
@@ -64,6 +64,7 @@
     "@angular/compiler-cli": "20.0.3",
     "@angular/language-service": "20.0.3",
     "@eslint/js": "^9.8.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "@nestjs/schematics": "11.0.5",
     "@nestjs/testing": "^10.0.2",
     "@nx/angular": "21.2.0",
