--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "eslint": "^9.28.0",
     "eslint-config-prettier": "10.1.1",
     "eslint-plugin-playwright": "^1.6.2",
+    "eslint-plugin-prettier": "^5.5.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
