--- a/libs/shared/widget-contracts/package.json
+++ b/libs/shared/widget-contracts/package.json
@@ -6,6 +6,8 @@
   "main": "./src/index.js",
   "types": "./src/index.d.ts",
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "@angular/core": "20.0.3",
+    "@angular/forms": "20.0.3"
   }
 }
