feat(header): update header module and integrate into app layout
- Renamed header import in tsconfig.base.json to use scoped package name.
- Created AppLayoutComponent to include the HeaderComponent and router outlet.
- Added HeaderLink interface and HEADER_LINKS constant to manage header navigation links.

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -37,7 +37,7 @@
       "@lifestyle-dashboard/widget-contracts": ["libs/shared/widget-contracts/src/index.ts"],
       "@lifestyle-dashboard/widget-name-pipe": ["libs/front/ui/widget-name-pipe/src/index.ts"],
       "@lifestyle-dashboard/widget-registry": ["libs/shared/widget-registry/src/index.ts"],
-      "header": ["libs/front/ui/header/src/index.ts"]
+      "@lifestyle-dashboard/header": ["libs/front/ui/header/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
