feat(sport-activities): add sport activities widget with settings component and update registry

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -37,7 +37,8 @@
       "@lifestyle-dashboard/waketime-widget": ["libs/front/ui/waketime-widget/src/index.ts"],
       "@lifestyle-dashboard/widget-contracts": ["libs/shared/widget-contracts/src/index.ts"],
       "@lifestyle-dashboard/widget-name-pipe": ["libs/front/ui/widget-name-pipe/src/index.ts"],
-      "@lifestyle-dashboard/widget-registry": ["libs/shared/widget-registry/src/index.ts"]
+      "@lifestyle-dashboard/widget-registry": ["libs/shared/widget-registry/src/index.ts"],
+      "@lifestyle-dashboard/sport-activities-widget": ["libs/front/ui/sport-activities-widget/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
